# my-fastapi-app

./: .env  Dockerfile  main.py  pyproject.toml
